# oddsmatcher

./: .env  .gitignore  .vercelignore  README.md  index.html  tailwind.config.ts  vercel.json
.claude/: launch.json
.github/workflows/: scrape.yml  scrape_oddsapi.yml  scraper-betfair.yml  scraper-centroquote.yml
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/src/oddsmatcher_backend/: __init__.py  main.py
backend/src/oddsmatcher_backend/config/: bookmakers.py  leagues.py  markets.py  settings.py
backend/src/oddsmatcher_backend/db/: pipeline.py  supabase_client.py
backend/src/oddsmatcher_backend/scheduler/: runner.py
backend/src/oddsmatcher_backend/scraper/: _base_playwright.py  bet365.py  betfair.py  betsson.py  browser.py  bwin.py  centroquote.py  eurobet.py  lottomatica.py  models.py  oddsapi.py  page_helpers.py  parsers.py  selectors.py  sisal.py  snai.py  sportmonks.py  theoddsapi.py  williamhill.py
scraper/: .env.bak  .env.example  .gitignore  betfair_scraper.py  daemon.err  daemon.py  requirements.txt  scrape_centroquote.py
src/: App.tsx  index.css
src/components/: BetfairQuotesTable.tsx  MatchedBettingResults.tsx  MultipleMatchedBettingResults.tsx  Navbar.tsx  OddsAlerts.tsx  OddsComparator.tsx  OddsMatcherTable.tsx  OddsResults.tsx  ProtectedRoute.tsx  PuntaBancaModal.tsx  SingolaBPModal.tsx  SurebetResults.tsx  ThreeWayArbitrageResults.tsx
src/contexts/: AuthContext.tsx
src/hooks/: use-odds-search.ts
src/lib/: betprofit-api.ts  utils.ts
src/pages/: Index.tsx  Login.tsx  Surebet.tsx  (+3 more)
supabase/: config.toml
(+41 files in other folders)
