[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oddsmatcher-backend"
version = "0.1.0"
description = "CentroQuote scraper and odds pipeline for Oddsmatcher"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "playwright-stealth>=1.0",
    "beautifulsoup4>=4.12",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
oddsmatcher = "oddsmatcher_backend.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/oddsmatcher_backend"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B"]
ignore = ["S311"]  # random is fine for delays

[tool.pytest.ini_options]
asyncio_mode = "auto"
